Version 0.4.2 (...)

- Updated to the released version of SBT 0.7.2.

---------------------------------------------------------------------------
Version 0.4.1 (11 March, 2010)

- Fixed inadvertent bug in grizzled.cmd command handling, when commands
  span multiple lines.

---------------------------------------------------------------------------
Version 0.4 (11 March, 2010)

- Added grizzled.collection.GrizzledLinearSeq and related implicits, as a place
  to put additional methods for sequences.
- Added grizzled.collection.GrizzledLinearSeq.columnarize(), which takes a
  sequence (e.g., a list), converts its contents to strings, and returns a
  single string with the sequence's contents arranged in columns.
- Rearranged the locations of various implicit functions, so callers can
  have finer-grained control over which ones are in scope.
- grizzled.editline.EditLine now shows its completions in columnar format.
- Added BlockCommandHandler to grizzled.cmd, to handle commands consisting
  of blocks of lines between a start and end line.
- Added HiddenCommandHandler to grizzled.cmd, allowing special commands that
  are not displayed in the help.
- Changed EOF handling in grizzled.cmd slightly.
- Added createTemporaryDirectory() and withTemporaryDirectory() to
  grizzled.file.util module.
- Added isEmpty() to grizzled.file.GrizzledFile (which can be implicitly
  converted to and from java.io.File).
- Fixed problem with prefix handling in grizzled.string.WordWrapper.
- Now requires sbt 0.7.2 to build from source.

---------------------------------------------------------------------------
Version 0.3.1 (2 March, 2010)

- grizzled.cmd changes:

  * "history" command now uses this syntax:
        history [-n] [regex]
     where "n" is the maximum number of entries to show, and "regex" is a
     regular expression to filter history entries.
  * Some commands starting with "." were being incorrectly limited to a
    single character (e.g., ".r", but not ".read").